# kiss-engine

./: .gitignore  Cargo.toml
gltf-helpers/: Cargo.toml
gltf-helpers/src/: animation.rs  lib.rs
its-a-me/: Cargo.toml
its-a-me/shaders/: blit.frag  blit.frag.spv  flat_colour.frag  flat_colour.frag.spv  full_screen_tri.vert  mario.frag  mario.frag.spv  mario.vert  mario.vert.spv  nega_mario.frag  nega_mario.frag.spv  point.vert  point.vert.spv  world.frag  world.frag.spv  world.vert  world.vert.spv
its-a-me/src/: level.rs  main.rs
kiss-engine-vk/: Cargo.toml
kiss-engine-vk/src/: binding_resources.rs  device.rs  lib.rs  pipeline_resources.rs  primitives.rs
kiss-engine-wgpu/: Cargo.toml
kiss-engine-wgpu/src/: lib.rs
ludum-dare/: Cargo.toml  bounce_sphere.glb  capsule.glb  char.blend  compile_shaders.sh  dxc.sh  fire_giant.blend  fire_giant.glb  fire_giant.gltf  game.blend  house.blend  house.glb  meteor.blend  meteor.glb  plane.glb  settings.cap  skydome.blend  skydome.blend1  skydome.glb  todo.md  tree.blend  tree.glb  water.glb
ludum-dare/shaders/: bake_height_map.frag.hlsl  bake_height_map.vert.hlsl  bounce_sphere.frag.hlsl  bounce_sphere.vert.hlsl  capsule.frag.hlsl  capsule.vert.hlsl  capsule.vert.spv  common.h  constants.h  house.vert.hlsl  meteor.frag.hlsl  meteor.vert.hlsl  meteor_outline.frag.hlsl  meteor_outline.vert.hlsl  plane.frag.hlsl  plane.frag.spv  plane.vert.hlsl  plane.vert.spv  ripple.frag.hlsl  ripple.vert.hlsl  skydome.frag.hlsl  skydome.vert.hlsl  tree.frag.hlsl  tree.vert.hlsl  water.frag.hlsl
ludum-dare/shaders/compiled/: bake_height_map.frag.spv  bake_height_map.vert.spv  bounce_sphere.frag.spv  bounce_sphere.vert.spv  capsule.frag.spv  capsule.vert.spv  house.frag.spv  house.vert.spv  meteor.frag.spv  meteor.vert.spv  meteor_outline.frag.spv  meteor_outline.vert.spv  plane.frag.spv  plane.vert.spv  ripple.frag.spv  ripple.vert.spv  skydome.frag.spv  skydome.vert.spv  tree.frag.spv  tree.vert.spv  water.frag.spv
ludum-dare/src/: animation.rs  assets.rs  main.rs
vk-test/: Cargo.toml
vk-test/src/: main.rs
wasm-web-helpers/: Cargo.toml
wasm-web-helpers/src/: lib.rs
web/: index.html
wgpu-test/: Cargo.toml  frag.hlsl  frag.hlsl.spv  vert.hlsl  vert.hlsl.spv
wgpu-test/src/: main.rs
