[workspace]
resolver = "2"
members = [
    "kiss-engine-wgpu",
    "kiss-engine-vk",
    "wgpu-test",
    "run-wasm",
    "wasm-web-helpers",
    "its-a-me",
    "ludum-dare",
    "gltf-helpers",
    "vk-test",
]

[patch.crates-io]
web-sys = { path = "../wasm-bindgen/crates/web-sys" }
wasm-bindgen = { path = "../wasm-bindgen" }
wasm-bindgen-shared = { path = "../wasm-bindgen/crates/shared" }
js-sys = { path = "../wasm-bindgen/crates/js-sys" }
wgpu = { path = "../../wgpu/wgpu" }
wgpu-hal = { path = "../../wgpu/wgpu-hal" }