[workspace]
resolver = "2"
members = [
    "kiss-engine-wgpu",
    "kiss-engine-vk",
    "wgpu-test",
    "run-wasm",
    "wasm-web-helpers",
    "its-a-me",
    "ludum-dare",
    "gltf-helpers",
    "vk-test",
]

[patch.crates-io]
web-sys = { git = "https://github.com/expenses/wasm-bindgen", branch = "webxr-fixes-with-video-frame-callback" }
wasm-bindgen = { git = "https://github.com/expenses/wasm-bindgen", branch = "webxr-fixes-with-video-frame-callback" }
wasm-bindgen-shared = { git = "https://github.com/expenses/wasm-bindgen", branch = "webxr-fixes-with-video-frame-callback" }
js-sys = { git = "https://github.com/expenses/wasm-bindgen", branch = "webxr-fixes-with-video-frame-callback" }
glow = { path = "../glow" }

wgpu = { path = "../../wgpu/wgpu" }
wgpu-core = { path = "../../wgpu/wgpu-core" }
wgpu-hal = { path = "../../wgpu/wgpu-hal" }
