[package]
name = "gltf-helpers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.9.1", features = ["derive"] }
glam = { version = "0.20.3", features = ["bytemuck"] }
gltf = { version = "1.0.0",  features = ["utils", "names"], default-features = false }
log = "0.4.16"
ordered-float = "2.10.0"
