[package]
name = "ludum-dare"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.37.0"
ash-window = "0.10.0"
c_str_macro = "1.0.3"
winit = "0.26.1"
kiss-engine-vk = { path = "../kiss-engine-vk" }
log = "0.4.16"
bytemuck = { version = "1.9.1", features = ["derive"] }
env_logger = "0.9.0"
gltf = "1.0.0"
glam = { version = "0.20.3", features = ["bytemuck"] }
anyhow = "1.0.56"
rand = "0.8.5"
image = { version = "0.24.1", default-features = false, features = ["png"] }
ordered-float = "2.10.0"
gltf-helpers = { path = "../gltf-helpers" }
gpu-allocator = { git = "https://github.com/Traverse-Research/gpu-allocator", branch = "ash-0.37" }
vk-sync = { package = "vk-sync-fork", version = "0.4.0" }
