[package]
name = "vk-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.37.0"
c_str_macro = "1.0.3"
winit = "0.26.1"
ash-window = "0.10.0"
log = "0.4.16"
env_logger = "0.9.0"
gpu-allocator = { git = "https://github.com/Traverse-Research/gpu-allocator", branch = "ash-0.37" }
vk-sync = { package = "vk-sync-fork", version = "0.4.0" }
dolly = "0.3.0"
glam = { version = "0.20.3", features = ["bytemuck"] }
bytemuck = "1.9.1"
libsm64 = { git = "https://github.com/nickmass/libsm64-rust"  }
kiss-engine-vk = { path = "../kiss-engine-vk" }