[package]
name = "wgpu-test"
version = "0.1.0"
edition = "2021"

[dependencies]
pollster = "0.2.5"
wgpu = "0.12.0"
winit = "0.26.1"
kiss-engine-wgpu = { path = "../kiss-engine-wgpu" }
log = "0.4.16"
console_error_panic_hook = "0.1.7"
console_log = "0.2.0"
web-sys = { version = "0.3.56", features = ["Location"] }
wasm-bindgen-futures = "0.4.29"
bytemuck = "1.8.0"
env_logger = "0.9.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-web-helpers = { path = "../wasm-web-helpers" }
